Залила новый файл
Доделала страницу

--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,75 @@
 	<ul></div>	
 <nav>
 <header>
-
 <div class="main"><div class="title__container">
-<h1>Привет <br> Это моя первая страница...!</h1>
-<h4>Гуманитарий, который пытается сделать свой первый сайт</h4>
-<input type="submit" name="Мои работы">
+<body>
+</html>
+<header>
+	<nav>
+		<div class="logo">Обо мне</div>
+		<div class="menu"></div><ul>
+		<li>Обо мне</li>
+		<ul></div>	
+<nav>
+<header>
+	<nav>
+		<div class="logo">Что я умею</div>
+		<div class="menu"></div><ul>
+		<li>Веб дизайн</li>
+		<li>Разработка</li>
+		<li>CEO-оптимизация</li>
+		<li>Маркетинг</li>
+	<ul></div>
+<header>	
+<nav>
+<nav>
+<header>
+<div class="main"><div class="title__container">
+
 <body>
 
 </html>
+
+<header>
+	<nav>
+		<div class="logo">Кейсы</div>
+		<ul></div>	
+<nav>
+<header>
+
+	<nav>
+<header>
+
+<div class="main"><div class="title__container">
+
+<body>
+
+</html>
+
+<header>
+	<nav>
+		<div class="logo">Отзывы</div>
+		<ul></div>	
+<nav>
+<header>
+
+	<title>Расчет стоимости</title>
+</head>
+
+<body>
+	
+<header>
+	<nav>
+		<div class="logo">Калькулятор онлайн</div>
+		<div class="menu"></div><ul>
+		<ul></div>	
+<nav>
+<header>
+
+	 <footer>
+    <nav>
+      <section>
+        <li> <a href="/feedback">Связаться со мной!</a>
+        <li> <a href="/feedback">Реккомендации</a>
+  </footer>
+</body>
